--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.0.0"
+    "react-native-screens": "^4.0.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
