--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "axios": "^1.7.7",
+    "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-safe-area-context": "^4.14.0",
@@ -34,8 +35,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
